language/src/test/programs/ok/runtime/no_return.rngl
# 0
fn main():
    let x = 10