language/src/test/programs/error/parser/empty_function_3.rngl
fn main():

fn test():
    ret 1